--- a/exercise/src/main/resources/application.properties
+++ b/exercise/src/main/resources/application.properties
@@ -1,7 +1,20 @@
-spring.kafka.bootstrap-servers=127.0.0.1:9092
+#Kafka server address and port
+spring.kafka.bootstrap-servers=emil-kafka-exercise-sulistya-e019.aivencloud.com:25950
 
 #key will be UUID in String
-spring.kafka.producer.key-serializer: org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.key-serializer= org.apache.kafka.common.serialization.StringSerializer
 
 #to serialize java object as JSON
-spring.kafka.producer.value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+spring.kafka.producer.value-serializer= org.springframework.kafka.support.serializer.JsonSerializer
+
+#Kafka SSL config
+spring.kafka.ssl.trust-store-location=file:///home/emil/Downloads/aiven-kafka/client.truststore.jks
+spring.kafka.ssl.trust-store-password=abcd1234
+spring.kafka.ssl.key-store-location=file:///home/emil/Downloads/aiven-kafka/client.keystore.p12
+spring.kafka.ssl.key-store-password=abcd1234
+#spring.kafka.ssl.key-password=fSfVstml24B7O3tc
+spring.kafka.properties.security.protocol=SSL
+
+spring.kafka.producer.security.protocol=SSL
+
+
