use JsonSerializer for Key

--- a/exercise/src/main/resources/application.properties
+++ b/exercise/src/main/resources/application.properties
@@ -2,7 +2,8 @@
 spring.kafka.bootstrap-servers=emil-kafka-exercise-sulistya-e019.aivencloud.com:25950
 
 #key will be UUID in String
-spring.kafka.producer.key-serializer= org.apache.kafka.common.serialization.StringSerializer
+#spring.kafka.producer.key-serializer= org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.key-serializer= org.springframework.kafka.support.serializer.JsonSerializer
 
 #to serialize java object as JSON
 spring.kafka.producer.value-serializer= org.springframework.kafka.support.serializer.JsonSerializer
@@ -13,6 +14,7 @@ spring.kafka.ssl.trust-store-password=abcd1234
 spring.kafka.ssl.key-store-location=file:///home/emil/Downloads/aiven-kafka/client.keystore.p12
 spring.kafka.ssl.key-store-password=abcd1234
 spring.kafka.properties.security.protocol=SSL
+
 
 
 
